# snovault

./: .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  CONTRIBUTORS.json  LICENSE.txt  Makefile  README.rst  base.ini  bootstrap.py  buildout.cfg  cloud-config-cluster.yml  conftest.py  development.ini  development.ini.template  gulpfile.js  package-lock.json  package.json  production.ini.in  pyproject.toml  pytest.ini  pytest.ini.DISABLED  requirements-minimal.txt  requirements-minimal.txt.DISABLED  requirements.txt  requirements.txt.DISABLED  setup.py  setup.py.DISABLED  setup_eb.py  test.ini.template  versions.cfg  versions.cfg.DISABLED
.github/workflows/: main-publish.yml  main.yml  static-checks.yml
docs/source/: AWS.rst  attachment.rst  auth.rst  conf.py  custom-travis.rst  database.rst  embedding-and-indexing.rst  es_indexing.rst  es_mapping.rst  index.rst  invalidation.rst  kafka.rst  keys.rst  local_installation.rst  object-lifecycle.rst  overview.rst  resource_views.rst  resources.rst  search_info.rst  snowflakes.rst  storage_overview.rst  testing.rst  traversal.rst
etc/: snovault-apache.conf
scripts/: embeds.py  fix-dist-info  macpoetry-install
snovault/: __init__.py  _version.py  aggregated_items.py  app.py  appdefs.py  attachment.py  authentication.py  authorization.py  batchupgrade.py  cache.py  calculated.py  config.py  connection.py  crud_views.py  custom_embed.py  dev_servers.py  drs.py  embed.py  etag.py  indexing_views.py  invalidation.py  item_models.py  json_renderer.py  jsongraph.py  jsonld_context.py  loadxl.py  local_roles.py  mime_types.py  project.py  project_app.py  project_defs.py  project_start.py  pyramid_compat.py  renderers.py  resource_views.py  resources.py  root.py  routes.py  schema_formats.py  schema_graph.py  (+17 more)
snovault/commands/: captured_output.py  check_local_portal_creds.py  check_rendering.py  clear_db_es_contents.py  create_mapping_on_deploy.py  es_index_data.py  generate_local_access_key.py  jsonld_rdf.py  list_db_tables.py  load_access_keys.py  load_data.py  load_data_by_type.py  prepare_template.py  profile.py  purge_item_type.py  spreadsheet_to_json.py  update_inserts_from_server.py  utils.py  view_local_object.py  wipe_test_indexer_queues.py  wipe_test_indices.py
snovault/elasticsearch/: __init__.py  cached_views.py  calculated_property_signature.py  create_mapping.py  es_index_listener.py  esstorage.py  indexer.py  indexer_queue.py  indexer_utils.py  interfaces.py  mpindexer.py  secondary_indexing.py
snovault/ingestion/: ingestion_listener.py  ingestion_message_handler_default.py  ingestion_processor_decorator.py  ingestion_processors.py  queue_utils.py
snovault/project/: access_key.py  authentication.py  authorization.py  health.py  ingestion.py  loadxl.py  renderers.py  schema_views.py
snovault/redis/: README.rst  __init__.py  interfaces.py  redis_connection.py
snovault/schemas/: access_key.json  filter_set.json  ingestion_submission.json  mixins.json  user.json
snovault/search/: AGENTS.md  compound_search.py  lucene_builder.py  search.py  search_utils.py
snovault/test_schemas/: AbstractItemTestSecondSubItem.json  AbstractItemTestSubItem.json  EmbeddingTest.json  NestedEmbeddingContainer.json  NestedObjectLinkTarget.json  TestingBiogroupSno.json  TestingBiosampleSno.json  TestingBiosourceSno.json  TestingCalculatedProperties.json  TestingDependencies.json  TestingDisableNested.json  TestingDownload.json  TestingIndividualSno.json  TestingLinkAggregateSno.json  TestingLinkSourceSno.json  TestingLinkTargetElasticSearch.json  TestingLinkTargetSno.json  TestingLinkedSchemaField.json  TestingMixins.json  TestingNestedEnabled.json  TestingNoteSno.json  TestingPostPutPatchSno.json  TestingServerDefault.json  mixins.json
snovault/tests/: __init__.py  authentication.py  authorization.py  conftest.py  conftest_settings.py  elasticsearch_fixture.py  helpers.py  postgresql_fixture.py  pyramidfixtures.py  root.py  search.py  serverfixtures.py  test_access_key.py  test_attachment.py  test_authentication.py  test_authorization.py  test_calculated.py  test_calculated_registry.py  test_clear_db_es_contents.py  test_compound_search.py  test_create_mapping.py  test_create_mapping_on_deploy.py  test_create_unauthorized_user.py  test_drs.py  test_edw_hash.py  test_embed.py  test_embed_utils.py  test_embedding.py  test_es_index_data.py  test_es_permissions.py  test_esstorage_efficiency.py  test_etag.py  test_health_path.py  test_helpers.py  test_indexer_auth_debug_config.py  test_indexer_queue.py  test_indexing.py  test_indexing_perf_guardrails.py  test_ingestion_poison_message.py  test_ingestion_queue.py  (+42 more)
snovault/types/: __init__.py  access_key.py  acl.py  base.py  filter_set.py  ingestion.py  user.py
snovault/views/: access_key.py
src/scripts/: wipe_test_indices.py
src/snovault/: __init__.py  _version.py  aggregated_items.py  app.py  attachment.py  auditor.py  authentication.py  batchupgrade.py  cache.py  config.py  connection.py  crud_views.py  dev_servers.py  embed.py  fourfront_utils.py  indexing_views.py  interfaces.py  invalidation.py  jsongraph.py  jsonld_context.py  renderers.py  resource_views.py  resources.py  root.py  schema_graph.py  schema_utils.py  schema_views.py  stats.py  storage.py  tests.py  typeinfo.py  upgrader.py  util.py  validation.py  validators.py
src/snovault/commands/: es_index_data.py  spreadsheet_to_json.py  wipe_test_indices.py
src/snovault/elasticsearch/: __init__.py  cached_views.py  create_mapping.py  es_index_listener.py  esstorage.py  indexer.py  indexer_queue.py  indexer_utils.py  interfaces.py  mpindexer.py
src/snovault/test_schemas/: AbstractItemTestSubItem.json  EmbeddingTest.json  TestingDependencies.json  TestingKeys.json  TestingLinkAggregateSno.json  TestingLinkSourceSno.json  TestingLinkTargetElasticSearch.json  TestingLinkTargetSno.json  TestingPostPutPatchSno.json
src/snovault/tests/: authentication.py  conftest.py  elasticsearch_fixture.py  postgresql_fixture.py  root.py  (+26 more)
src/snowflakes/: __init__.py  root.py  search.py  server_defaults.py
(+15 files in other folders)
