[tool.poetry]
name = "dcicsnovault"
version = "4.9.2.1b0"  # was "4.9.2", but should be "5.0.0" on release
description = "Storage support for 4DN Data Portals."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/4dn-dcic/snovault"
repository = "https://github.com/4dn-dcic/snovault"
documentation = "https://github.com/4dn-dcic/snovault"
packages = [
  { include="snovault", from="." }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Framework :: Pyramid',


    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',
    'Topic :: Database :: Database Engines/Servers',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6'
]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.8"
aws_requests_auth = "^0.4.1"
# TODO: This is a backport of Python's statistics library for versions earlier than Python 3.4,
#       so may no longer be needed. Something to investigate later. -kmp 20-Feb-2020
"backports.statistics" = "0.1.0"
boto3 = "^1.20.34"
elasticsearch = "6.8.1"
elasticsearch_dsl = "^6.4.0"
dcicutils = "^3.6.0"
# TODO: Probably want ">=0.15.2,<1" here since "^" is different for "0.xx" than for higher versions. Changing it
#       would require re-testing I don't have time for, so it'll have to be a future future change. -kmp 20-Feb-2020
future = "^0.15.2"
futures = "^3.1.1"
# Version 1.0b8 is the same as 0.9999999.
html5lib = "0.9999999"
humanfriendly = "^1.44.9"
jsonschema_serialize_fork = "^2.1.1"
MarkupSafe = ">=0.23,<1"
netaddr = ">=0.8.0,<1"
passlib = "^1.7.4"
Pillow = "^6.2.2"  # later version known to work - Will 11/17/20
psutil = "^5.9.0"
psycopg2-binary = "^2.9.3"
PyBrowserID = "^0.10.0"
pyramid = "1.10.4"
pyramid_localroles = ">=0.1,<1"
pyramid-multiauth = ">=0.9.0,<1"
pyramid-retry = "^1.0"
pyramid-tm = "^2.4"
pyramid-translogger = "^0.1"
python-dateutil = "^2.8.2"
# For now we're pinning python_magic at 0.4.15. We've observed problems with 0.4.17 and 0.4.18, and there's
# no version above 0.4.18 that is compatible with Python 3.4. -kmp 9-May-2020
# TODO Reconsider this version pinning when we release the 3.4 and/or 3.5 support.
# Refs:
#  - https://travis-ci.org/github/4dn-dcic/snovault/builds/684503833
#  - https://github.com/4dn-dcic/snovault/pull/147
python_magic = "0.4.15"  # ">=0.4.11,<1"
pytz = ">=2021.3"
# There was no version 4 of PyYAML. We upgraded today to PyYAML 5 per compatibility info in:
# https://github.com/yaml/pyyaml/issues/265
# We must have 5.1 to get the new yaml.safe_load method.
# awscli appears to add its own restrictions, but our uses are pretty simple.
# 5.2 had soe bugs that were probably only in Python 2, but we require 5.2 here just in case.
# The narrowing to 5.3 is just to help 'poetry lock' converge faster. -kmp 1-Mar-2020
PyYAML = ">=5.1,<5.3"
rdflib = "^4.2.2"
rdflib-jsonld = ">=0.5.0,<1.0.0"
rutter = ">=0.3,<1"
# setuptools = "^36.6.0"
simplejson = "^3.17.6"
SPARQLWrapper = "^1.8.5"
SQLAlchemy = "1.3.16"  # Pinned because >=1.3.17 is a problem
# Our use of structlog is pretty vanilla, so we should be OK with changes across the 18-19 major version boundary.
structlog = ">=19.2.0,<20"
subprocess_middleware = ">=0.3,<1"
# TODO: Investigate whether a major version upgrade is allowable for 'transaction'.
transaction = "^2.4.0"
# TODO: Investigate whether a major version upgrade is allowable for 'venusian'.
venusian = "^1.2.0"
WebOb = "^1.8.7"
WebTest = "^2.0.35"
WSGIProxy2 = "0.4.2"
xlrd = "^1.0.0"
# zope = "^4.2.1"
"zope.deprecation" = "^4.4.0"
"zope.interface" = "^4.7.2"
"zope.sqlalchemy" = "1.3"

[tool.poetry.dev-dependencies]
coverage = ">=6.2"
codacy-coverage = ">=1.3.11"
coveralls = ">=3.3.1"
flake8 = "^3.9.0"
flaky = ">=3.7.0"
moto = "1.3.7"
pip-licenses = "^3.5.3"
# Experimental upgrade to PyTest 4.5. It may be possible to upgrade further, but I think this is an improvement.
# -kmp 11-May-2020
pytest = "4.5.0"
pytest-cov = ">=2.2.1"
pytest-exact-fixtures = ">=0.3"
pytest-instafail = ">=0.3.0"
# TODO: Investigate whether a major version upgrade is allowable for 'pytest-mock'.
pytest-mock = ">=0.11.0"
# TODO: Investigate whether a major version upgrade is allowable for 'pytest-runner'.
pytest-runner = ">=4.0"
pytest-timeout = ">=1.0.0"
"repoze.debug" = ">=1.0.2"
responses = "^0.17.0"

[tool.poetry.scripts]
wipe-test-indices = "snovault.commands.wipe_test_indices:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
